--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ExCRV</string>
+    <string name="app_name">Contact List</string>
     <string name="delete">delete</string>
     <string name="edit">edit</string>
 </resources>
